# gutenberg-scrape

./: .gitignore  README.md  pyproject.toml
src/gutenberg_scrape/: __init__.py  main.py
