[project]
name = "gutenberg-scrape"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Salvador Guzman", email = "guzmansalv@gmail.com" }
]
dependencies = [
    "tqdm>=4.67.1",
    "requests>=2.32.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/gutenberg_scrape"]
